@@ -76,6 +76,7 @@ Mantis
  * Added g_strip_bare_lf to toggle use of make_lf_crlf().
  * Added priority reporting on the report form for developers.
  * Added project category copy.
+ * Added CRYPT_FULL_SALT authentication.
  * Removed access_min and access threshold concepts from the user and project management.
  * Removed extra "echo" in news archive page.
  * Removed proj_user_delete_page.php.
